index html modified

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>Coming soon.......</p>
             
                 <hr>
-                <h1>About</h1>
+                <h1>About's</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore deleniti repudiandae officia facilis nulla natus sed quae saepe laborum voluptatibus?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nihil architecto sequi necessitatibus, numquam quae, itaque nesciunt quasi nulla non temporibus tenetur dolore ducimus doloribus unde perspiciatis eveniet saepe fugiat expedita incidunt explicabo dignissimos quidem ipsa? Facere quae magnam blanditiis!</p>
             </div>
